--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "a2a-sdk>=0.2.1",
     "agentevals>=0.0.7",
     "click>=8.2.0",
+    "fastmcp>=2.0.0",
     "langchain-anthropic>=0.3.13",
     "langchain-core>=0.3.60",
     "langchain-google-genai>=2.1.4",
